force-app/main/default/objects/All_profie_list_config__c/All_profie_list_config__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used to exclude profiles from QuBy_OpportunityTrigger_BFR trigger</description>
    <label>All profile list config</label>
</CustomObject>