force-app/main/default/objects/All_profie_list_config__c/fields/Profile_exclude_from_QuBy_trigger__c.field-meta.xml
<CustomField>
    <fullName>Profile_exclude_from_QuBy_trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Profile exclude from QuBy trigger</label>
    <type>Checkbox</type>
</CustomField>