force-app/main/default/objects/All_profie_list_config__c/fields/Profile_id__c.field-meta.xml
<CustomField>
    <fullName>Profile_id__c</fullName>
    <label>Profile id</label>
    <type>TextArea</type>
</CustomField>