force-app/main/default/objects/All_profie_list_config__c/fields/QuBy_LTNG_ProfileCheck__c.field-meta.xml
<CustomField>
    <fullName>QuBy_LTNG_ProfileCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QuBy_LTNG_ProfileCheck</label>
    <type>Checkbox</type>
</CustomField>